--- a/.htaccess
+++ b/.htaccess
@@ -1,100 +1,159 @@
-# Brandon Media - Apache Server Optimizations
-# Cyberpunk Performance Configuration
+# Brandon Media Performance Optimization .htaccess
+# High-performance Apache configuration for futuristic websites
 
-# Enable Gzip Compression for Faster Loading
+# Enable compression for better transfer speeds
 <IfModule mod_deflate.c>
-    AddOutputFilterByType DEFLATE text/plain
-    AddOutputFilterByType DEFLATE text/html
-    AddOutputFilterByType DEFLATE text/xml
-    AddOutputFilterByType DEFLATE text/css
-    AddOutputFilterByType DEFLATE application/xml
-    AddOutputFilterByType DEFLATE application/xhtml+xml
-    AddOutputFilterByType DEFLATE application/rss+xml
+    # Compress HTML, CSS, JavaScript, Text, XML and fonts
     AddOutputFilterByType DEFLATE application/javascript
+    AddOutputFilterByType DEFLATE application/rss+xml
+    AddOutputFilterByType DEFLATE application/vnd.ms-fontobject
+    AddOutputFilterByType DEFLATE application/x-font
+    AddOutputFilterByType DEFLATE application/x-font-opentype
+    AddOutputFilterByType DEFLATE application/x-font-otf
+    AddOutputFilterByType DEFLATE application/x-font-truetype
+    AddOutputFilterByType DEFLATE application/x-font-ttf
     AddOutputFilterByType DEFLATE application/x-javascript
+    AddOutputFilterByType DEFLATE application/xhtml+xml
+    AddOutputFilterByType DEFLATE application/xml
+    AddOutputFilterByType DEFLATE font/opentype
+    AddOutputFilterByType DEFLATE font/otf
+    AddOutputFilterByType DEFLATE font/ttf
     AddOutputFilterByType DEFLATE image/svg+xml
+    AddOutputFilterByType DEFLATE image/x-icon
+    AddOutputFilterByType DEFLATE text/css
+    AddOutputFilterByType DEFLATE text/html
+    AddOutputFilterByType DEFLATE text/javascript
+    AddOutputFilterByType DEFLATE text/plain
+    AddOutputFilterByType DEFLATE text/xml
 </IfModule>
 
-# Browser Caching for Static Assets
+# Enable Brotli compression (better than Gzip)
+<IfModule mod_brotli.c>
+    SetOutputFilter BROTLI_COMPRESS
+    SetEnvIfNoCase Request_URI \
+        \.(?:gif|jpe?g|png|ico|webp|avif)$ no-brotli dont-vary
+    SetEnvIfNoCase Request_URI \
+        \.(?:exe|t?gz|zip|bz2|sit|rar)$ no-brotli dont-vary
+</IfModule>
+
+# Leverage Browser Caching - Aggressive caching for static assets
 <IfModule mod_expires.c>
     ExpiresActive on
     
-    # CSS and JavaScript
-    ExpiresByType text/css "access plus 1 year"
-    ExpiresByType application/javascript "access plus 1 year"
-    ExpiresByType application/x-javascript "access plus 1 year"
-    
-    # Images
+    # Images - 1 year
+    ExpiresByType image/gif "access plus 1 year"
     ExpiresByType image/png "access plus 1 year"
     ExpiresByType image/jpg "access plus 1 year"
     ExpiresByType image/jpeg "access plus 1 year"
-    ExpiresByType image/gif "access plus 1 year"
-    ExpiresByType image/svg+xml "access plus 1 year"
     ExpiresByType image/webp "access plus 1 year"
-    ExpiresByType image/ico "access plus 1 year"
+    ExpiresByType image/avif "access plus 1 year"
+    ExpiresByType image/svg+xml "access plus 1 year"
     
-    # Documents
-    ExpiresByType application/pdf "access plus 1 month"
+    # CSS and JavaScript - 1 month (can be updated more frequently)
+    ExpiresByType text/css "access plus 1 month"
+    ExpiresByType application/javascript "access plus 1 month"
+    ExpiresByType text/javascript "access plus 1 month"
     
-    # HTML
+    # Fonts - 1 year
+    ExpiresByType font/woff "access plus 1 year"
+    ExpiresByType font/woff2 "access plus 1 year"
+    ExpiresByType application/font-woff "access plus 1 year"
+    ExpiresByType application/font-woff2 "access plus 1 year"
+    
+    # HTML - 1 hour (for dynamic content)
     ExpiresByType text/html "access plus 1 hour"
+    
+    # Manifest and service worker - immediate
+    ExpiresByType application/manifest+json "access plus 0 seconds"
+    ExpiresByType text/cache-manifest "access plus 0 seconds"
 </IfModule>
 
-# Set Cache-Control Headers
+# Cache-Control headers for better caching strategy
 <IfModule mod_headers.c>
-    # Static assets
-    <FilesMatch "\.(css|js|png|jpg|jpeg|gif|svg|webp|ico)$">
-        Header set Cache-Control "public, max-age=31536000, immutable"
+    # CSS and JS files
+    <FilesMatch "\.(css|js)$">
+        Header set Cache-Control "public, max-age=2592000"
     </FilesMatch>
     
-    # HTML files
-    <FilesMatch "\.(html|htm)$">
-        Header set Cache-Control "public, max-age=3600"
+    # Images
+    <FilesMatch "\.(gif|png|jpe?g|svg|ico|webp|avif)$">
+        Header set Cache-Control "public, max-age=31536000"
     </FilesMatch>
     
-    # Security Headers for Cyberpunk Protection
-    Header always set X-Frame-Options "SAMEORIGIN"
-    Header always set X-Content-Type-Options "nosniff"
+    # Fonts
+    <FilesMatch "\.(woff|woff2|ttf|otf|eot)$">
+        Header set Cache-Control "public, max-age=31536000"
+        Header set Access-Control-Allow-Origin "*"
+    </FilesMatch>
+    
+    # Security headers for futuristic security
+    Header always set X-Content-Type-Options nosniff
+    Header always set X-Frame-Options DENY
     Header always set X-XSS-Protection "1; mode=block"
     Header always set Referrer-Policy "strict-origin-when-cross-origin"
+    Header always set Permissions-Policy "geolocation=(), microphone=(), camera=()"
     
-    # Content Security Policy for Enhanced Security
-    Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self';"
+    # HSTS for HTTPS (if using SSL)
+    # Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
 </IfModule>
 
-# Force HTTPS (Cyberpunk Security)
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteCond %{HTTPS} off
-    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+# Remove ETags (they're problematic for load-balanced servers)
+<IfModule mod_headers.c>
+    Header unset ETag
 </IfModule>
-
-# Remove Server Signature
-ServerSignature Off
+FileETag None
 
 # Prevent access to sensitive files
-<FilesMatch "\.(htaccess|htpasswd|ini|log|sh|inc|bak)$">
+<Files ~ "^\.(htaccess|htpasswd|ini|phps|fla|psd|log|sh)$">
     Order Allow,Deny
     Deny from all
-</FilesMatch>
+</Files>
 
-# Enable KeepAlive for Better Performance
+# Enable Keep-Alive for persistent connections
 <IfModule mod_headers.c>
     Header set Connection keep-alive
 </IfModule>
 
-# Optimize File Access
-Options -Indexes
-DirectoryIndex index.html index.php
-
-# MIME Types for Modern Web
+# Optimize file serving
 <IfModule mod_mime.c>
-    AddType application/javascript .js
-    AddType text/css .css
-    AddType image/svg+xml .svg
-    AddType image/webp .webp
-    AddType application/manifest+json .webmanifest
+    # Web fonts
+    AddType application/font-woff woff
+    AddType application/font-woff2 woff2
+    AddType application/vnd.ms-fontobject eot
+    AddType application/x-font-ttf ttf
+    AddType font/opentype otf
+    
+    # Modern image formats
+    AddType image/webp webp
+    AddType image/avif avif
+    
+    # Manifest
+    AddType application/manifest+json webmanifest
 </IfModule>
 
-# Futuristic 404 Error Page
-ErrorDocument 404 /index.html
+# URL Rewriting for clean URLs and performance
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    
+    # Force HTTPS (uncomment if using SSL)
+    # RewriteCond %{HTTPS} !=on
+    # RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+    
+    # Remove trailing slashes
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_URI} (.+)/$
+    RewriteRule ^ %1 [R=301,L]
+    
+    # Add trailing slash to directories
+    RewriteCond %{REQUEST_FILENAME} -d
+    RewriteCond %{REQUEST_URI} !(.*)/$
+    RewriteRule ^(.*)$ $1/ [R=301,L]
+</IfModule>
+
+# Prevent hotlinking of images
+<IfModule mod_rewrite.c>
+    RewriteCond %{HTTP_REFERER} !^$
+    RewriteCond %{HTTP_REFERER} !^https?://(www\.)?brandon-media\.com [NC]
+    RewriteCond %{HTTP_REFERER} !^https?://(www\.)?github\.com [NC]
+    RewriteRule \.(gif|jpg|jpeg|png|webp|avif)$ - [F,L]
+</IfModule>
